[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://iap-lib/iap.gd" type="Script" id=2]
[ext_resource path="res://assets/icon.png" type="Texture" id=3]
[ext_resource path="res://assets/square.png" type="Texture" id=4]
[ext_resource path="res://assets/products/diamonds1.png" type="Texture" id=5]
[ext_resource path="res://scenes/minigame/minigame.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/productsControl.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/font1.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 35
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 70
use_filter = true
font_data = ExtResource( 8 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IAP" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="header" type="ColorRect" parent="ui"]
margin_right = 720.0
margin_bottom = 300.0
color = Color( 0.129412, 0.403922, 0.356863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="ui/header"]
position = Vector2( 360, 148.419 )
scale = Vector2( 0.393254, 0.393254 )
texture = ExtResource( 3 )

[node name="title" type="Label" parent="ui"]
visible = false
margin_left = 49.9856
margin_top = 339.723
margin_right = 401.986
margin_bottom = 396.723
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.435294, 0.435294, 0.435294, 1 )
text = "Purchase Itens"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="noitems" type="Label" parent="ui"]
self_modulate = Color( 1, 1, 1, 0.545098 )
margin_top = 323.0
margin_right = 720.0
margin_bottom = 741.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.435294, 0.435294, 0.435294, 1 )
text = "No items available"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="productsControl" type="Control" parent="ui"]
margin_top = 400.0
margin_right = 720.0
margin_bottom = 710.0
rect_min_size = Vector2( 720, 310 )
rect_clip_content = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grid" type="GridContainer" parent="ui/productsControl"]
margin_left = 40.0
margin_right = 673.0
margin_bottom = 300.0
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_debug" type="Label" parent="ui"]
margin_left = 52.0
margin_top = 1138.0
margin_right = 666.0
margin_bottom = 1200.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.435294, 0.435294, 0.435294, 1 )
text = "Message"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug" type="Label" parent="ui"]
margin_left = 52.0
margin_top = 1185.0
margin_right = 666.0
margin_bottom = 1251.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.87451, 0.87451, 0.87451, 1 )
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minigame" type="Node2D" parent="ui"]

[node name="ViewportContainer" type="ViewportContainer" parent="ui/minigame"]
margin_top = 761.278
margin_right = 720.0
margin_bottom = 1105.28
rect_min_size = Vector2( 720, 344 )
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ui/minigame/ViewportContainer"]
size = Vector2( 720, 344 )
size_override_stretch = true
own_world = true
handle_input_locally = false
disable_3d = true
usage = 1
render_target_update_mode = 3

[node name="minigame" parent="ui/minigame/ViewportContainer/Viewport" instance=ExtResource( 6 )]
scale = Vector2( 0.38, 0.35 )

[node name="points" type="Label" parent="ui/minigame"]
margin_left = 527.0
margin_top = 774.0
margin_right = 674.0
margin_bottom = 864.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.835294, 0.839216, 0.109804, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.819608 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shield" type="Label" parent="ui/minigame"]
margin_left = 343.0
margin_top = 774.0
margin_right = 490.0
margin_bottom = 864.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.984314, 0.4, 0.960784, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.819608 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diamonds1" type="Sprite" parent="ui/minigame/shield"]
position = Vector2( 66.4767, 35.3667 )
scale = Vector2( 0.231526, 0.231526 )
texture = ExtResource( 5 )

[node name="bar" type="TextureProgress" parent="ui/minigame"]
margin_left = 52.256
margin_top = 797.649
margin_right = 301.256
margin_bottom = 820.649
value = 100.0
rounded = true
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.921569, 0, 0, 1 )
tint_progress = Color( 0.0235294, 0.372549, 0.0862745, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="consume_fail" from="IAP" to="." method="_on_IAP_consume_fail"]
[connection signal="consume_not_required" from="IAP" to="." method="_on_IAP_consume_not_required"]
[connection signal="consume_success" from="IAP" to="." method="_on_IAP_consume_success"]
[connection signal="has_purchased" from="IAP" to="." method="_on_IAP_has_purchased"]
[connection signal="purchase_cancel" from="IAP" to="." method="_on_IAP_purchase_cancel"]
[connection signal="purchase_fail" from="IAP" to="." method="_on_IAP_purchase_fail"]
[connection signal="purchase_success" from="IAP" to="." method="_on_IAP_purchase_success"]
[connection signal="sku_details_complete" from="IAP" to="." method="_on_IAP_sku_details_complete"]
[connection signal="sku_details_error" from="IAP" to="." method="_on_IAP_sku_details_error"]
